# tic_baseline

./: .gitignore  README.md  pyproject.toml  requirements.txt
resources/: run_in_env.bat
resources/configs/: config.yaml
resources/mmaction_template/: binary_cfg_template.py  binary_train_kfold_template.py
scripts/: build_mmaction_groupkfold_ann.py  evaluate_predictions.py  export_mmaction2_minimal.py
src/asdmotion/: logger.py
src/asdmotion/detector/: detector.py  executor.py  preprocess.py
src/asdmotion/pipeline/: aggregator.py  holistic_pose.py  openpose_executor.py
src/asdmotion/training/: __init__.py  excel_gt.py
temp/: CLI.txt
